--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quote Generator</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="/css/style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
@@ -13,9 +13,14 @@
 <body>
   <div class="app">
     <div class="quotebox">
-      <blockquote class="quote-text"></blockquote>
+      <h2>Show a sibling that you care</h2>
+      <p>We asked over fifty adult siblings when they were younger, what their parents, family members and other service providers did to make them feel special and show that they care. Here is one of their responses:</p>
+      <div class="quote-text-container">
+        <blockquote class="quote-text"></blockquote>
+      </div>
       <button type="button" class="quote-button">See another response</button>
     </div>
+    <p class="quotebox">You can view more responses in our presentation on slideshare.</p>
   </div>
   <script src="/js/quote_gen_dest.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
