--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quote Generator</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
@@ -22,6 +22,6 @@
     </div>
     <p class="quotebox">You can view more responses in our presentation on slideshare.</p>
   </div>
-  <script src="/js/quote_gen_dest.js" type="text/javascript" charset="utf-8" async defer></script>
+  <script src="./js/quote_gen_dest.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
