--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 <body>
   <div class="app">
     <div class="quotebox">
-      <h2>Show a sibling that you care</h2>
-      <p>We asked over fifty adult siblings when they were younger, what their parents, family members and other service providers did to make them feel special and show that they care. Here is one of their responses:</p>
+      <h2>How to Let Young Siblings Know You Care.</h2>
+      <p>We asked over fifty adult brothers and sisters:</p>
+      <p class="offset-p"><strong>When you were younger, what did your parents, other family members, and service providers do to make you feel special and let you know they cared?</strong></p>
+      <p>Here is what they said:</p>
       <div class="quote-text-container">
         <blockquote class="quote-text"></blockquote>
       </div>
       <button type="button" class="quote-button">See another response</button>
     </div>
-    <p class="quotebox">You can view more responses in our presentation on slideshare.</p>
+    <div class="quotebox">
+      <p>See a slideshow version (with graphics) of How to Let Young Sibling Know You Care on Slideshare.</p>
+      <p>Do you have a suggestion on how to let young siblings know you care?  Write us at <a href="mailto:">willmakeupanaddress@siblingsupport.org</a></p>
+      <p><em>Don Meyer, Cristina Breshears, and Patrick Martin © Sibling Support Project.  All rights reserved.</em></p>
+    </div>
   </div>
   <script src="./js/quote_gen_dest.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
