--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="app">
     <div class="quotebox">
-      <h2>How to Let Young Siblings Know You Care.</h2>
+      <h2>How to Let Young Siblings Know You Care</h2>
       <p>We asked over fifty adult brothers and sisters:</p>
       <p class="offset-p"><strong>When you were younger, what did your parents, other family members, and service providers do to make you feel special and let you know they cared?</strong></p>
       <p>Here is what they said:</p>
