refactored app to work with phone

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p class="offset-p"><strong>When you were younger, what did your parents, other family members, and service providers do to make you feel special and let you know they cared?</strong></p>
       <p>Here is what they said:</p>
       <div class="quote-text-container">
-        <blockquote class="quote-text"></blockquote>
+        <p class="quote-text"></p>
       </div>
       <button type="button" class="quote-button">See another response</button>
     </div>
