Adds slideshare link and email address to text

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <button type="button" class="quote-button">See another response</button>
     </div>
     <div class="quotebox">
-      <p>See a slideshow version (with graphics) of How to Let Young Sibling Know You Care on Slideshare.</p>
-      <p>Do you have a suggestion on how to let young siblings know you care?  Write us at <a href="mailto:">willmakeupanaddress@siblingsupport.org</a></p>
-      <p><em>Don Meyer, Cristina Breshears, and Patrick Martin © Sibling Support Project.  All rights reserved.</em></p>
+      <p>See a slideshow version (with graphics) of <a href="http://www.slideshare.net/DonMeyer18/how-to-let-young-siblings-know-you-care">How to Let Young Sibling Know You Care</a> on Slideshare.</p>
+      <p>Do you have a suggestion on how to let young siblings know you care?  Write us at <a href="mailto:care@siblingsupport.org">care@siblingsupport.org</a></p>
+      <p><em>Don Meyer, Cristina Breshears, and Patrick Martin<br> © Sibling Support Project.  All rights reserved.</em></p>
     </div>
   </div>
   <script src="./js/quote_gen_dest.js" type="text/javascript" charset="utf-8" async defer></script>
